--- a/作業記録.md
+++ b/作業記録.md
@@ -50,3 +50,11 @@ https://qiita.com/TomoProg/items/9497be086d338b3b74cc
 ## rails アプリ作成 修正
 
 docker-compose run web rails new . --force --no-deps --database=mysql --skip-test --webpacker
+
+## DB 作成
+
+docker-compose run web rake db:create
+
+## doccker-compose up
+
+起動
