改行コード修正

--- a/作業記録.md
+++ b/作業記録.md
@@ -58,3 +58,14 @@ docker-compose run web rake db:create
 ## doccker-compose up
 
 起動
+
+## 失敗
+
+```
+-webpacker
+[+] Running 1/0
+ - Container mysql  Running                                                                                                             0.0s
+standard_init_linux.go:228: exec user process caused: no such file or directory
+```
+
+改行コードがミスってる
